bugfix with .display-ib-box_4columns

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -59,7 +59,7 @@
           "category": "CSS",
           "autoCompile": true,
           "autoprefixer": false,
-          "compress": false,
+          "compress": true,
           "sourceMaps": false,
           "strictMath": false,
           "strictUnits": false,
@@ -208,6 +208,17 @@
             "3fad5b5f"
           ],
           "type": "javascript"
+        },
+        "aa5fd7cb": {
+          "id": "aa5fd7cb",
+          "path": "README.html",
+          "output": "README.html",
+          "name": "README.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
@@ -407,13 +418,7 @@
               "comments": false,
               "preserve_line": false,
               "screw_ie8": false,
-              "preamble": null,
-              "indent_start": 0,
-              "indent_level": 4,
-              "width": 80,
-              "max_line_len": 32000,
-              "source_map": null,
-              "quote_style": 0
+              "preamble": null
             }
           }
         }
