--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "responsive-UX-theme",
-  "author": "Stas Melnikov melnik909@ya.ru",
+  "author": "Stas Melnikov email: melnik909@ya.ru",
   "license": "MIT",
   "version": "1.1.0",
   "devDependencies": {
