--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp-css-base64": "^1.3.4",
     "gulp-cssnano": "^2.0.0",
     "gulp-html-minifier": "^0.1.7",
+    "gulp-html-replace": "^1.6.1",
     "gulp-jshint": "^2.0.1",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0"
